fix banner overlay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1380,12 +1380,11 @@ h5 {
   }
 
   .home-header-grid img {
-    padding-top: 110px;
+    padding-top: 70px;
   }
 
   .banner-overlay {
-    background-position: 24%;
-    /* padding-bottom: 115px; */
+    padding-bottom: 115px;
   }
 
   .appt-thumbnail img {
